// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VocabChipList /> should adopt a color prop 1`] = `
<div>
  <ReactTooltip
    className="vocab-tip"
    html={true}
    id="vocabChipTip"
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
  <styled.ul>
    <defaultProps(VocabChip)
      character="近々"
      color="green"
      data-for="vocabChipTip"
      data-place="bottom"
      data-tip="
      <ul>
        <li>
          <span>EN</span>
          <span>Before Long</span>
        <li>
          <span>JA </span>
          <span lang=\\"ja\\">ちかぢか</span>
        </li>
        <li>
          <span>RC</span>
          <span>62%</span>
        </li>
      </ul>
    "
      id={553}
    />
    <defaultProps(VocabChip)
      character="少女"
      color="green"
      data-for="vocabChipTip"
      data-place="bottom"
      data-tip="
      <ul>
        <li>
          <span>EN</span>
          <span>Young Lady</span>
        <li>
          <span>JA </span>
          <span lang=\\"ja\\">しょうじょ</span>
        </li>
        <li>
          <span>RC</span>
          <span>62%</span>
        </li>
      </ul>
    "
      id={176}
    />
    <defaultProps(VocabChip)
      character="少年"
      color="green"
      data-for="vocabChipTip"
      data-place="bottom"
      data-tip="
      <ul>
        <li>
          <span>EN</span>
          <span>Young Boy</span>
        <li>
          <span>JA </span>
          <span lang=\\"ja\\">しょうねん</span>
        </li>
        <li>
          <span>RC</span>
          <span>62%</span>
        </li>
      </ul>
    "
      id={280}
    />
  </styled.ul>
</div>
`;

exports[`<VocabChipList /> should match baseline snapshot 1`] = `
<div>
  <ReactTooltip
    className="vocab-tip"
    html={true}
    id="vocabChipTip"
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
  <styled.ul>
    <defaultProps(VocabChip)
      character="近々"
      color="purple"
      data-for="vocabChipTip"
      data-place="bottom"
      data-tip="
      <ul>
        <li>
          <span>EN</span>
          <span>Before Long</span>
        <li>
          <span>JA </span>
          <span lang=\\"ja\\">ちかぢか</span>
        </li>
        <li>
          <span>RC</span>
          <span>62%</span>
        </li>
      </ul>
    "
      id={553}
    />
    <defaultProps(VocabChip)
      character="少女"
      color="purple"
      data-for="vocabChipTip"
      data-place="bottom"
      data-tip="
      <ul>
        <li>
          <span>EN</span>
          <span>Young Lady</span>
        <li>
          <span>JA </span>
          <span lang=\\"ja\\">しょうじょ</span>
        </li>
        <li>
          <span>RC</span>
          <span>62%</span>
        </li>
      </ul>
    "
      id={176}
    />
    <defaultProps(VocabChip)
      character="少年"
      color="purple"
      data-for="vocabChipTip"
      data-place="bottom"
      data-tip="
      <ul>
        <li>
          <span>EN</span>
          <span>Young Boy</span>
        <li>
          <span>JA </span>
          <span lang=\\"ja\\">しょうねん</span>
        </li>
        <li>
          <span>RC</span>
          <span>62%</span>
        </li>
      </ul>
    "
      id={280}
    />
  </styled.ul>
</div>
`;
